samples/_failures_safe/1761253917_f64448_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_651425a1.c: In function ‘main’:
./samples/SAFE/__tmp_651425a1.c:160:16: error: missing terminating " character
  160 |         printf("\
      |                ^~
./samples/SAFE/__tmp_651425a1.c:160:9: error: expected expression at end of input
  160 |         printf("\
      |         ^~~~~~
./samples/SAFE/__tmp_651425a1.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_651425a1.c:160:9: error: expected declaration or statement at end of input
